--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#F8FAFC</color>
+    <color name="grey">#BCCCDC</color>
+    <color name="dark_grey">#9AA6B2</color>
+    <color name="white_grey">#D9EAFD</color>
+
 </resources>
