--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#F8FAFC</color>
-    <color name="grey">#BCCCDC</color>
-    <color name="dark_grey">#9AA6B2</color>
-    <color name="white_grey">#D9EAFD</color>
+        <!-- Warna Tema Aplikasi -->
+        <color name="header_color">#BCCCDC</color>
+        <color name="card_color">#D9EAFD</color>
+        <color name="bottom_nav_color">#9AA6B2</color>
+        <color name="white">#FFFFFF</color>
+        <color name="black">#000000</color>
+        <color name="text_primary">#333333</color>
+        <color name="text_secondary">#666666</color>
+        <color name="text_hint">#999999</color>
 
+        <!-- Material Design warna lain jika dibutuhkan-->
+        <color name="purple_200">#FFBB86FC</color>
+        <color name="purple_500">#FF6200EE</color>
+        <color name="purple_700">#FF3700B3</color>
+        <color name="teal_200">#FF03DAC5</color>
+        <color name="teal_700">#FF018786</color>
+        <color name="grey">#BCCCDC</color>
+        <color name="dark_grey">#9AA6B2</color>
+        <color name="white_grey">#D9EAFD</color>
 </resources>
