--- a/app/src/main/res/layout/item_tugas.xml
+++ b/app/src/main/res/layout/item_tugas.xml
@@ -5,77 +5,81 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="6dp"
-    app:cardCornerRadius="16dp"
+    app:cardCornerRadius="35dp"
     app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/kartutugas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#E0F7FA"             android:padding="16dp">
+        android:background="@color/white_grey"
+        android:padding="16dp">
 
-        <View
-            android:id="@+id/statusBox"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="0dp"
-            android:background="@drawable/shape_status_box" app:layout_constraintStart_toStartOf="parent"
+        <CheckBox
+            android:id="@+id/centang"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/layoutkartutugas"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/sandwich"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/centang"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/catatan_diskripsi"
-            app:layout_constraintVertical_bias="0.1" />
+            app:layout_constraintVertical_bias="1.0">
 
-        <TextView
-            android:id="@+id/judul"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="8dp"
-            android:text="Tugas 1"
-            android:textColor="@android:color/black"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@id/statusBox"
-            app:layout_constraintStart_toEndOf="@id/statusBox"
-            app:layout_constraintEnd_toStartOf="@id/imageViewMenu" />
+            <TextView
+                android:id="@+id/judultugas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/interbold"
+                android:text="Tugas 1"
+                android:textColor="@android:color/black"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@id/sandwich"
+                app:layout_constraintStart_toEndOf="@id/centang"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/catatan_diskripsi"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="Membuat Program Ini"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@id/judul"
-            app:layout_constraintTop_toBottomOf="@id/judul"
-            app:layout_constraintEnd_toStartOf="@id/imageViewMenu" />
+            <TextView
+                android:id="@+id/deskripsitugas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/interbold"
+                android:text="Membuat Program Ini"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tgltugas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:fontFamily="@font/interbold"
+                android:text="Tanggal"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+        </LinearLayout>
 
         <ImageView
-            android:id="@+id/imageViewMenu"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:id="@+id/sandwich"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:contentDescription="Menu Opsi"
-            android:padding="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_sandwich" /> <TextView
-        android:id="@+id/textViewDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="0dp"
-        android:text="22/12/2005"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageViewMenu"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            app:layout_constraintTop_toBottomOf="@id/catatan_diskripsi"
-            app:layout_constraintBottom_toTopOf="@id/textViewDate" />
-
+            app:srcCompat="@drawable/ic_sandwich" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
