--- a/app/src/main/res/layout/fragment_catatan.xml
+++ b/app/src/main/res/layout/fragment_catatan.xml
@@ -1,43 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp">
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <!-- SEARCH BAR -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/white_grey"
-            app:cardCornerRadius="35dp"
-            android:layout_marginVertical="10dp">
-            <ImageView
-                android:id="@+id/searchicon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ic_search"/>
+            android:layout_height="50dp"
+            android:layout_marginBottom="12dp"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="2dp"
+            app:cardBackgroundColor="@color/white_grey">
 
-            <EditText
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/catatan"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/searchicon"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingHorizontal="16dp">
+
+                <ImageView
+                    android:id="@+id/searchicon"
+                    android:layout_width="67dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_search"
+                    android:tint="@android:color/darker_gray" />
+
+                <EditText
+                    android:id="@+id/et_search"
+                    android:layout_width="0dp"
+                    android:layout_height="37dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:hint="Cari Catatan"
+                    android:paddingStart="12dp"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
+        <!-- LIST CATATAN -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_catatan"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             tools:listitem="@layout/item_catatan"
-            tools:itemCount="5"/>
+            tools:itemCount="4"/>
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
