--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,19 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <TextView
+        android:id="@+id/main_header"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/header_color"
+        android:padding="16dp"
+        android:text="Daftar Catatan"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:fontFamily="@font/interbold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <!-- ===================== -->
     <!-- Fragment Container -->
     <!-- ===================== -->
@@ -17,10 +30,10 @@
         android:layout_height="0dp"
         app:defaultNavHost="true"
         app:navGraph="@navigation/mobile_navigation"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/main_header"
         app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- ===================== -->
     <!-- Bottom Navigation -->
