--- a/app/src/main/res/layout/item_catatan.xml
+++ b/app/src/main/res/layout/item_catatan.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
-    android:layout_marginHorizontal="16dp"
     app:cardBackgroundColor="@color/card_color"
     app:cardCornerRadius="20dp"
     app:cardElevation="4dp">
@@ -16,22 +16,26 @@
         android:padding="20dp">
 
         <!-- LinearLayout untuk Judul, Deskripsi, Tanggal -->
+
         <LinearLayout
             android:id="@+id/layoutkartucatatan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/iv_edit"
+            app:layout_constraintEnd_toStartOf="@+id/ic_edit_tugas"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
             <!-- Judul -->
             <TextView
                 android:id="@+id/catatan_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Judul"
+                android:text="JudulCatatan"
+                android:fontFamily="@font/interbold"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -42,25 +46,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/interbold"
                 android:text="• Deskripsi"
                 android:textColor="@android:color/black"
                 android:textSize="14sp" />
 
             <!-- Tanggal -->
-            <TextView
-                android:id="@+id/tglcatatan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="12dp"
-                android:text="12/12/2005"
-                android:textColor="@android:color/black"
-                android:textSize="14sp" />
+
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tglcatatan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="12/12/2005"
+            android:textColor="@android:color/black"
+            android:fontFamily="@font/interbold"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
         <!-- Icon Edit -->
         <ImageView
-            android:id="@+id/iv_edit"
+            android:id="@+id/ic_edit_catatan"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginEnd="8dp"
@@ -68,13 +76,13 @@
             android:contentDescription="@string/edit"
             android:padding="4dp"
             android:src="@drawable/ic_edit"
-            app:layout_constraintEnd_toStartOf="@id/iv_hapus"
+            app:layout_constraintEnd_toStartOf="@id/ic_hapus_catatan"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@android:color/black" />
 
         <!-- Icon Hapus -->
         <ImageView
-            android:id="@+id/iv_hapus"
+            android:id="@+id/ic_hapus_catatan"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:background="?attr/selectableItemBackgroundBorderless"
