--- a/app/src/main/res/layout/item_tugas.xml
+++ b/app/src/main/res/layout/item_tugas.xml
@@ -1,73 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
-    app:cardCornerRadius="35dp"
-    app:cardElevation="2dp">
+    app:cardBackgroundColor="@color/card_color"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/kartutugas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white_grey"
-        android:padding="16dp">
+        android:padding="20dp">
+
 
         <CheckBox
             android:id="@+id/centang"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="43dp"
+            android:layout_height="43dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
+        <!-- LinearLayout untuk Judul, Deskripsi, Tanggal -->
         <LinearLayout
             android:id="@+id/layoutkartutugas"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingHorizontal="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/ic_edit_tugas"
             app:layout_constraintStart_toEndOf="@+id/centang"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintVertical_bias="0.0">
 
+            <!-- Judul -->
             <TextView
-                android:id="@+id/judultugas"
+                android:id="@+id/tugas_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/interbold"
-                android:text="Tugas 1"
+                android:text="JudulTugas"
                 android:textColor="@android:color/black"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@id/sandwich"
-                app:layout_constraintStart_toEndOf="@id/centang"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:fontFamily="@font/interbold"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
+            <!-- Deskripsi -->
             <TextView
-                android:id="@+id/deskripsitugas"
+                android:id="@+id/tugas_deskripsi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="8dp"
+                android:text="isi Tugas"
                 android:fontFamily="@font/interbold"
-                android:text="Membuat Program Ini"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/tgltugas"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:fontFamily="@font/interbold"
-                android:text="Tanggal"
                 android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
+
+            <!-- Tanggal -->
+
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/tgltugas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="12/12/2005"
+            android:fontFamily="@font/interbold"
+            android:textColor="@android:color/black"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+        <!-- Icon Edit -->
+        <ImageView
+            android:id="@+id/ic_edit_tugas"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/edit"
+            android:padding="4dp"
+            android:src="@drawable/ic_edit"
+            app:layout_constraintEnd_toStartOf="@id/ic_hapus_tugas"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@android:color/black" />
+
+        <!-- Icon Hapus -->
+        <ImageView
+            android:id="@+id/ic_hapus_tugas"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/hapus"
+            android:padding="4dp"
+            android:src="@drawable/ic_delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@android:color/black" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
+
