--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,8 +41,9 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav_view"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:background="@color/bottom_nav_color"
+        app:itemIconSize="30dp"
         app:itemIconTint="#FBF9F9"
         app:itemTextColor="@color/white"
         app:labelVisibilityMode="labeled"
