--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/header_color"
-        android:padding="16dp"
+        android:paddingStart="20dp"
+        android:paddingVertical="20dp"
         android:text="Daftar Catatan"
         android:textColor="@color/white"
         android:textSize="20sp"
