--- a/app/src/main/res/layout/fragment_tugas.xml
+++ b/app/src/main/res/layout/fragment_tugas.xml
@@ -7,57 +7,99 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:fillViewport="true">
 
-
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="12dp"
-            app:cardCornerRadius="25dp"
-            app:cardElevation="2dp"
-            app:cardBackgroundColor="@color/white_grey">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="12dp"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="2dp"
+                app:cardBackgroundColor="@color/white_grey">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:paddingHorizontal="16dp">
+
+                    <ImageView
+                        android:id="@+id/searchicon"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/ic_search" />
+                    <EditText
+                        android:id="@+id/et_search"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:fontFamily="@font/intersemibold"
+                        android:hint="Cari Tugas..."
+                        android:paddingStart="12dp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/dark_grey"
+                        android:textSize="20sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <!-- List Belum Selesai -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_tugas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                tools:listitem="@layout/item_tugas"
+                tools:itemCount="2"/>
+
+            <!-- Header Tugas Selesai -->
+            <LinearLayout
+                android:id="@+id/layout_tugas_selesai"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
                 android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:paddingHorizontal="16dp">
+                android:padding="10dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?attr/selectableItemBackground">
 
                 <ImageView
-                    android:id="@+id/searchicon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/ic_search" />
-                <EditText
-                    android:id="@+id/et_search"
+                    android:id="@+id/ic_diselesaikan"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_chevron_up" />
+
+                <TextView
+                    android:id="@+id/tv_diselesaikan"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@null"
-                    android:fontFamily="@font/intersemibold"
-                    android:hint="Cari Tugas..."
-                    android:paddingStart="12dp"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/dark_grey"
-                    android:textSize="20sp" />
+                    android:paddingHorizontal="12dp"
+                    android:text="Diselesaikan"
+                    android:textSize="14sp"
+                    android:textColor="@color/text_secondary"/>
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+            <!-- List Sudah Selesai -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_tugas_selesai"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                android:visibility="gone"
+                tools:listitem="@layout/item_tugas"
+                tools:itemCount="2"/>
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_tugas"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            tools:listitem="@layout/item_tugas"
-            tools:itemCount="4"/>
-
-    </LinearLayout>
-
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
